--- a/styles/style.css
+++ b/styles/style.css
@@ -15,5 +15,28 @@ body{
 }
 img{
 	width: 200px;
-	
+	border-radius: 50%;
+background-color: #6593ad;
+margin-left: 38%;
+margin-top: 10px;
+min-height: 200px;
+padding: 50px;
+}
+#bilde1{
+	width: 200px;
+	border-radius: 10%;
+	height: 100px;
+	position: absolute;
+	left: 5px;
+	top: 5px;
+
+}
+#bilde2{
+	width: 200px;
+	border-radius: 10%;
+	height: 100px;
+	position: absolute;
+	right: 5px;
+	top: 5px;
+
 }
